--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,6 @@
     "APP_TITLE": "PPW Code",
     "navigation": {
         "expandable_card": "Expandable Card",
-        "demo": "Demo"
+        "filter_table": "Filter Table"
     }
 }
