Add demo for the in memory logger

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
         "confirmation_dialog": "Confirmation Dialog",
         "expandable_card": "Expandable Card",
         "filter_table": "Filter Table",
+        "in_memory_logging": "In Memory Logging",
         "message_bar": "Message Bar"
     }
 }
