Add link to PeopleWare website in example app to showcase external navigation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
         "filter_table": "Filter Table",
         "global_error_handler": "Global Error Handler",
         "in_memory_logging": "In Memory Logging",
-        "message_bar": "Message Bar"
+        "message_bar": "Message Bar",
+        "peopleware_website": "PeopleWare Website"
     }
 }
