Add a dashboard card with a very long title that doesn't fit in one line to demo the overflowing of the title

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,7 @@
     },
     "navigation": {
         "confirmation_dialog": "Confirmation Dialog",
+        "confirmation_dialog_with_long_title": "Confirmation Dialog With Long Title Being Cut Off",
         "dashboard_item": "Dashboard Item",
         "expandable_card": "Expandable Card",
         "table": "Table",
