Translate the headers of the table demo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,5 +33,14 @@
         "in_memory_logging": "In Memory Logging",
         "message_bar": "Message Bar",
         "peopleware_website": "PeopleWare Website"
+    },
+    "table": {
+        "age": "Age",
+        "bonus": "Bonus",
+        "birthdate": "Birth date",
+        "firstname": "First name",
+        "income": "Income",
+        "lastname": "Last name",
+        "row-index": "Row index"
     }
 }
