--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -33,5 +33,14 @@
         "in_memory_logging": "In Memory Logging",
         "message_bar": "Message Bar",
         "peopleware_website": "PeopleWare Website"
+    },
+    "table": {
+        "age": "Leeftijd",
+        "bonus": "Bonus",
+        "birthdate": "Geboortedatum",
+        "firstname": "Voornaam",
+        "income": "Inkomen",
+        "lastname": "Naam",
+        "row-index": "Rij nummer"
     }
 }
