Add page about spacings to demo application

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
         "message_bar": "Message Bar",
         "peopleware_website": "PeopleWare Website",
         "shapes": "Shapes",
+        "spacings": "Spacings",
         "table": "Table"
     },
     "table": {
